# cmake-copy-library-example

./: CMakeLists.txt
examples/: CMakeLists.txt  demo.cpp
hello/include/hello/: hello.hpp
hello/private/hello/: secret.hpp
hello/src/: hello.cpp
